--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
         <div class="container">
             <div class="heading"><h1>My Book Library 📖</h1></div>
-        <div class="text"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium sint reiciendis iure animi, delectus amet adipisci accusamus magnam exercitationem labore 
-            nemo maxime quisquam, sed, enim quibusdam magni fugit voluptas totam.</p></div>
+        <div class="text"><p>A Library Project created by <b><a href="https://github.com/wdotgonzales" class="wdotgonzales"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="" class="github-logo"> wdotgonzales.</a></b> You can add your favorites books here and books you haven't read yet.</p></div>
 
         <form action="">
             <div class="book-container">
@@ -56,3 +55,4 @@
 </body>
 <script src="script.js"></script>
 </html>
+
